apps/zdash/infra/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zdash-ingress
  namespace: zdash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: zzdash.zeaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zdash-frontend
                port:
                  number: 80
    - host: api-zzdash.zeaz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zdash-backend
                port:
                  number: 8005
